typescript/checker/tests/conformance/es6/variableDeclarations/VariableDeclaration4_es6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            22,
        ),
        hi: BytePos(
            23,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/variableDeclarations/VariableDeclaration4_es6.ts:2:7
  |
2 | const a: number
  |       ^

